<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelTitulo" />

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelObs" />

        <EditText
            android:id="@+id/etObs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelLocal" />

        <EditText
            android:id="@+id/etLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1" >

            <TableRow>

                <TextView android:text="@string/labelData" />

                <TextView android:text="@string/labelHora" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/dataInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:gravity="center_horizontal"
                    android:inputType="date"
                    android:onClick="selecionarData" />

                <EditText
                    android:id="@+id/horaInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:gravity="center_horizontal"
                    android:inputType="time"
                    android:onClick="selecionarHora" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/termino" />
            </TableRow>

            <TableRow>

                <TextView android:text="@string/labelData" />

                <TextView android:text="@string/labelHora" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/dataTermino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:gravity="center_horizontal"
                    android:inputType="date"
                    android:onClick="selecionarData" />

                <EditText
                    android:id="@+id/horaTermino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:gravity="center_horizontal"
                    android:inputType="time"
                    android:onClick="selecionarHora" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>
